--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "next": "^2.4.9",
     "react": "^15.6.1",
     "react-doc-generator": "^1.2.5",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "theming": "^1.1.0"
   },
   "devDependencies": {
     "emotion": "^7.2.0",
