--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "^2.4.9",
+    "next": "^3.0.6",
     "react": "^15.6.1",
     "react-doc-generator": "^1.2.5",
     "react-dom": "^15.6.1",
+    "rimraf": "^2.6.1",
     "theming": "^1.1.0"
   },
   "devDependencies": {
@@ -21,7 +22,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "clean": "rimraf .next "
   },
   "repository": {
     "type": "git",
