--- a/fusion/package.json
+++ b/fusion/package.json
@@ -31,7 +31,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
-    "start": "npm run dev",
+    "start": "next",
     "clean": "rimraf .next",
     "lint": "eslint pages fusion",
     "pre-commit": "yarn lint"
