Heroku configuration testing

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dev": "next",
     "build": "next build",
     "prestart": "npm run clean && npm run build",
-    "start": "next start -p $PORT",
+    "start": "next start",
+    "heroku-start": "npm run clean && npm run build && next start -p $PORT",
     "clean": "rimraf .next",
     "lint": "eslint pages fusion",
     "pre-commit": "yarn lint",
