--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "heroku-start": "npm run clean && npm run build && next start -p $PORT",
     "clean": "rimraf .next",
     "lint": "eslint pages fusion",
-    "pre-commit": "npm run lint"
+    "pre-commit": "npm run lint",
     "heroku-postbuild": "next build"
   },
   "repository": {
