--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "clean": "rimraf .next",
     "lint": "eslint pages fusion",
     "pre-commit": "npm run lint",
-    "heroku-postbuild": "next build"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
