--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clean": "rimraf .next",
     "lint": "eslint pages fusion",
     "pre-commit": "npm run lint",
+    "test":"npm run lint",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
