--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "url": "git+https://github.com/areai51/fusion.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/areai51/fusion/issues"
   },
