--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "husky": "^0.14.3",
+    "prettier": "1.10.2",
     "react-live": "^1.7.0",
     "react-styleguidist": "^6.0.33",
     "theming": "^1.1.0",
@@ -37,11 +39,12 @@
     "heroku-start": "npm run clean && npm run build && next start -p $PORT",
     "clean": "rimraf .next",
     "lint": "eslint pages fusion",
-    "pre-commit": "npm run lint",
-    "test": "npm run lint",
+    "test": "echo 'no test :)'",
     "heroku-postbuild": "npm run build",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "precommit": "./node_modules/.bin/prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'",
+    "prepush": "npm test"
   },
   "repository": {
     "type": "git",
