--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "heroku-postbuild": "npm run build",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "precommit": "./node_modules/.bin/prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'",
-    "prepush": "npm test"
+    "precommit": "lint-staged",
+    "prepush": "npm test",
+    "prettier":
+      "./node_modules/.bin/prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'"
   },
-  "lint-staged":{
-    "*.{js,jsx,json,css,md}": ["./node_modules/.bin/prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'", "git add"]
+  "lint-staged": {
+    "*.{js,jsx,json,css,md}": ["npm run prettier", "git add"]
   },
   "repository": {
     "type": "git",
