--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   "bugs": {
     "url": "https://github.com/pagesource/fusion/issues"
   },
-  "homepage": "https://sape-fusion.herokuapp.com/"
+  "homepage": "https://sape-fusion.herokuapp.com/",
+  "engines": {
+    "node": "8.9.3"
+  }
 }
