--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^6.0.1",
     "prettier": "1.10.2",
+    "prettier-eslint-cli": "^4.7.0",
     "react-live": "^1.7.0",
     "react-styleguidist": "^6.0.33",
     "theming": "^1.1.0",
@@ -38,10 +39,9 @@
     "prestart": "npm run clean && npm run build",
     "start": "next start",
     "heroku-next-start": "next start -p $PORT",
-    "heroku-start":
-      "npm run clean && npm run build && npm run heroku-next-start",
+    "heroku-start": "npm run clean && npm run build && npm run heroku-next-start",
     "clean": "rimraf .next",
-    "lint": "eslint pages fusion",
+    "lint": "eslint pages fusion --fix",
     "test": "echo 'no test :)'",
     "heroku-postbuild": "npm run build",
     "styleguide": "styleguidist server",
@@ -49,10 +49,11 @@
     "precommit": "lint-staged",
     "prepush": "npm test",
     "prettier":
-      "./node_modules/.bin/prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'"
+      "./node_modules/.bin/prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'",
+    "format": "prettier-eslint --write '{lib,fusion,pages,theme}/**/*.js'"
   },
   "lint-staged": {
-    "*.{js,jsx,json,css,md}": ["npm run prettier", "git add"]
+    "*.{js,jsx,css,md}": ["npm run prettier", "npm run format", "git add"]
   },
   "repository": {
     "type": "git",
