--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "heroku-next-start": "next start -p $PORT",
     "heroku-start": "npm run clean && npm run build && npm run heroku-next-start",
     "clean": "rimraf .next",
-    "lint": "eslint pages fusion --fix",
+    "lint": "eslint pages fusion lib theme",
     "test": "echo 'no test :)'",
     "heroku-postbuild": "npm run build",
     "styleguide": "styleguidist server",
