--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
-  "extends": "airbnb",
+  "extends": [
+    "airbnb",
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "rules": {
     "react/jsx-filename-extension": 0
   }
