--- a/package.json
+++ b/package.json
@@ -4,30 +4,32 @@
   "description": "A collection of React Components built with Emotion.js",
   "main": "index.js",
   "dependencies": {
-    "chart.js": "^2.6.0",
+    "chart.js": "^2.7.1",
     "classnames": "^2.2.5",
-    "emotion": "^7.2.0",
+    "emotion": "^8.0.12",
+    "emotion-server": "^8.0.12",
     "husky": "^0.14.3",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "^3.0.6",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-chartjs-2": "^2.6.1",
+    "next": "^4.2.3",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.0",
     "react-doc-generator": "^1.2.5",
-    "react-dom": "^15.6.1",
-    "rimraf": "^2.6.1",
-    "theming": "^1.1.0"
+    "react-dom": "^16.2.0",
+    "react-emotion": "^8.0.12",
+    "rimraf": "^2.6.2",
+    "theming": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "react-live": "^1.7.0",
-    "react-styleguidist": "^6.0.33",
-    "theming": "^1.1.0",
-    "webpack": "^3.8.1"
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "react-live": "^1.9.2",
+    "react-styleguidist": "^6.2.2",
+    "theming": "^1.3.0",
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "dev": "next",
