--- a/package.json
+++ b/package.json
@@ -4,46 +4,55 @@
   "description": "A collection of React Components built with Emotion.js",
   "main": "index.js",
   "dependencies": {
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.6.0",
     "classnames": "^2.2.5",
-    "emotion": "^8.0.12",
-    "emotion-server": "^8.0.12",
+    "emotion": "^7.2.0",
     "husky": "^0.14.3",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "^4.2.3",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-chartjs-2": "^2.7.0",
+    "next": "^3.0.6",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.2",
+    "react-chartjs-2": "^2.6.1",
     "react-doc-generator": "^1.2.5",
-    "react-dom": "^16.2.0",
-    "react-emotion": "^8.0.12",
-    "rimraf": "^2.6.2",
-    "theming": "^1.3.0"
+    "react-dom": "^15.6.2",
+    "rimraf": "^2.6.1",
+    "theming": "^1.1.0",
+    "react-live": "^1.7.0"
   },
   "devDependencies": {
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "^7.6.1",
-    "react-live": "^1.9.2",
-    "react-styleguidist": "^6.2.2",
-    "theming": "^1.3.0",
-    "webpack": "^3.10.0"
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.1",
+    "prettier": "1.10.2",
+    "prettier-eslint-cli": "^4.7.0",    
+    "react-styleguidist": "^6.0.33",
+    "theming": "^1.1.0",
+    "webpack": "^3.8.1"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
     "prestart": "npm run clean && npm run build",
     "start": "next start",
-    "heroku-start": "npm run clean && npm run build && next start -p $PORT",
+    "heroku-next-start": "next start -p $PORT",
+    "heroku-start": "npm run clean && npm run build && npm run heroku-next-start",
     "clean": "rimraf .next",
-    "lint": "eslint pages fusion",
-    "pre-commit": "npm run lint",
+    "lint": "eslint pages fusion lib theme",
     "test": "npm run lint",
     "heroku-postbuild": "npm run build",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "precommit": "lint-staged",
+    "prettier":
+      "./node_modules/.bin/prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'",
+    "format": "prettier-eslint --write '{lib,fusion,pages,theme}/**/*.js'"
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,md}": ["npm run lint","npm run prettier", "npm run format", "git add"]
   },
   "repository": {
     "type": "git",
@@ -54,5 +63,8 @@
   "bugs": {
     "url": "https://github.com/pagesource/fusion/issues"
   },
-  "homepage": "https://sape-fusion.herokuapp.com/"
+  "homepage": "https://sape-fusion.herokuapp.com/",
+  "engines": {
+    "node": "8.9.3"
+  }
 }
