--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.2.0",
     "react-emotion": "^8.0.12",
     "rimraf": "^2.6.2",
-    "theming": "^1.3.0"
+    "theming": "^1.3.0",
+    "react-live": "^1.9.2"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
@@ -29,8 +30,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^6.0.1",
     "prettier": "1.10.2",
-    "prettier-eslint-cli": "^4.7.0",
-    "react-live": "^1.9.2",
+    "prettier-eslint-cli": "^4.7.0",    
     "react-styleguidist": "^6.2.2",
     "theming": "^1.3.0",
     "webpack": "^3.10.0"
