--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "description": "A collection of React Components built with Emotion.js",
   "main": "index.js",
   "dependencies": {
+    "@zeit/next-css": "^0.1.2",
     "chart.js": "^2.7.1",
     "classnames": "^2.2.5",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.12",
     "husky": "^0.14.3",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "^4.2.3",
+    "next": "^5.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-doc-generator": "^1.2.5",
     "react-dom": "^16.2.0",
     "react-emotion": "^8.0.12",
+    "react-live": "^1.9.2",
     "rimraf": "^2.6.2",
-    "theming": "^1.3.0",
-    "react-live": "^1.9.2"
+    "theming": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
@@ -30,7 +31,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^6.0.1",
     "prettier": "1.10.2",
-    "prettier-eslint-cli": "^4.7.0",    
+    "prettier-eslint-cli": "^4.7.0",
     "react-styleguidist": "^6.2.2",
     "theming": "^1.3.0",
     "webpack": "^3.10.0"
@@ -54,7 +55,12 @@
     "format": "prettier-eslint --write '{lib,fusion,pages,theme}/**/*.js'"
   },
   "lint-staged": {
-    "*.{js,jsx,css,md}": ["npm run lint","npm run prettier", "npm run format", "git add"]
+    "*.{js,jsx,css,md}": [
+      "npm run lint",
+      "npm run prettier",
+      "npm run format",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -67,6 +73,6 @@
   },
   "homepage": "https://sape-fusion.herokuapp.com/",
   "engines": {
-    "node": "8.9.3"
+    "node": "^8.9.3"
   }
 }
