(fix) styleguidist compile error
* added missing modules
* added code to ignore .babelrc

--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "react-emotion": "^8.0.12",
     "react-live": "^1.9.2",
     "rimraf": "^2.6.2",
+    "stylis": "^3.4.10",
     "theming": "^1.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
