--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.5",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.12",
+    "husky": "^0.14.3",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^5.0.0",
     "prop-types": "^15.6.0",
@@ -18,11 +19,15 @@
     "react-dom": "^16.2.0",
     "react-emotion": "^8.0.12",
     "react-live": "^1.9.2",
+    "rimraf": "^2.6.2",
+    "stylis": "^3.4.10",
     "theming": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-plugin-emotion": "^9.0.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -34,7 +39,7 @@
     "prettier": "1.10.2",
     "prettier-eslint-cli": "^4.7.0",
     "react-styleguidist": "^6.2.5",
-    "rimraf": "^2.6.2",
+    "theming": "^1.3.0",
     "webpack": "^3.10.0"
   },
   "scripts": {
