--- a/package.json
+++ b/package.json
@@ -53,12 +53,11 @@
     "styleguide:build": "styleguidist build",
     "precommit": "lint-staged",
     "prettier": "prettier  --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'",
-    "format": "prettier-eslint --write '{lib,fusion,pages,theme}/**/*.js'"
+    "format": "prettier-eslint --single-quote --trailing-comma es5 --write '{lib,fusion,pages,theme}/**/*.js'"
   },
   "lint-staged": {
     "*.{js,jsx,css,md}": [
-      "npm run lint",
-      "npm run prettier",
+      "npm run lint", 
       "npm run format",
       "git add"
     ]
