--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "classnames": "^2.2.5",
     "emotion": "^8.0.12",
     "emotion-server": "^8.0.12",
-    "husky": "^0.14.3",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^5.0.0",
     "prop-types": "^15.6.0",
@@ -26,9 +25,10 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-emotion": "^9.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-plugin-emotion": "^9.0.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -39,7 +39,6 @@
     "prettier": "1.10.2",
     "prettier-eslint-cli": "^4.7.0",
     "react-styleguidist": "^6.2.5",
-    "theming": "^1.3.0",
     "webpack": "^3.10.0"
   },
   "scripts": {
@@ -49,9 +48,10 @@
     "start": "next start",
     "heroku-next-start": "next start -p $PORT",
     "heroku-start": "npm run clean && npm run build && npm run heroku-next-start",
-    "clean": "rimraf .next",
+    "clean": "rimraf .next docs ",
     "lint": "eslint pages fusion lib theme",
-    "pre-commit": "npm run lint",
+    "format-staged": "prettier-eslint --single-quote --trailing-comma es5 --write",
+    "lint-staged": "eslint --fix",
     "test": "npm run lint",
     "heroku-postbuild": "npm run build",
     "styleguide": "styleguidist server",
@@ -62,8 +62,11 @@
   },
   "lint-staged": {
     "*.{js,jsx,css,md}": [
-      "npm run lint", 
-      "npm run format",
+      "npm run format-staged",
+      "git add"
+    ],
+    "*.{js,jsx}": [
+      "npm run lint-staged",
       "git add"
     ]
   },
